Added flyway for initial Customer table creation. docker-compose.yml added for local running

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,3 +1,10 @@
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/petmanagement
+    username: root
+    password: root
+
+
 petmanagement:
   user: guest
   password: guest
