Added basic save/retrieve test for repository to ensure proper setup. Tweaked initial flyway script to include an id (TODO - id should probably just be autogenerated by the db). Tweaked some application properties and docker compose properties.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,9 @@
+spring:
+  datasource:
+    url: ${PET_MANAGEMENT_JDBC_URL}
+    username: ${PET_MANAGEMENT_JDBC_USERNAME}
+    password: ${PET_MANAGEMENT_JDBC_PASSWORD}
+
 petmanagement:
   user: ${PET_MANAGEMENT_AUTH_USERNAME}
   password: ${PET_MANAGEMENT_AUTH_PASSWORD}
